--- a/Atlas_robot_pet/body_pose.conf
+++ b/Atlas_robot_pet/body_pose.conf
@@ -1,16 +1,15 @@
 [baseconf]
 # A socket server address to communicate with presenter agent
-presenter_server_ip=192.168.1.223
+presenter_server_ip=192.168.1.233
 
 # The port of presenter agent and server communicate with
 presenter_server_port=7006
 
 #the ip in presenter server view web url 
-presenter_view_ip=192.168.1.223
+presenter_view_ip=192.168.8.246
 
 #the ip of atlas200dk board connect with presenter server
-#presenter_agent_ip=192.168.1.2
-atlas200dk_board_ip=192.168.1.2
+presenter_agent_ip=192.168.8.205
 
 #view entry label in presenter server view web
 channel_name=video
