--- a/Atlas_robot_pet/presenterserver/presenterserver/display/config/logging.conf
+++ b/Atlas_robot_pet/presenterserver/presenterserver/display/config/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,body_pose
+keys=root,display
 
 [handlers]
 keys=rotatingFileHandler
@@ -11,17 +11,17 @@ keys=simpleFmt
 level=DEBUG
 handlers=rotatingFileHandler
 
-[logger_body_pose]
+[logger_display]
 level=DEBUG
 handlers=rotatingFileHandler
-qualname=body_pose
+qualname=display
 propagate=0
 
 [handler_rotatingFileHandler]
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFmt
-args=("body_pose.log", "a", 10*1024*1024, 2)
+args=("display.log", "a", 10*1024*1024, 2)
 
 [formatter_simpleFmt]
 format=%(asctime)s-%(levelname)s-%(filename)s:%(lineno)s %(message)s
