--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 opencv-python
+cython
 cython-bbox
 scipy
 lap
 Pillow
 numpy
+protobuf
 google-api-core==2.5.0
 google-api-python-client==2.37.0
 google-auth==2.6.0
